# heb-ipa-transcribe

./: .gitignore  README.md  pyproject.toml
dataset_output/: checkpoint_ipa.json
src/: download.py  main.py  transcribe.py
