[project]
name = "heb-ipa-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.1",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=1.5.0",
    "pandas>=3.0.1",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
]
