[project]
name = "heb-ipa-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=4.6.1",
    "huggingface-hub>=1.5.0",
    "transformers>=4.51.0",
    "librosa>=0.11.0",
    "nvitop>=1.6.2",
    "pandas>=3.0.1",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
]
